fixed overflow

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,6 +9,7 @@ body {
     background-color: #333;
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
+    overflow-x: hidden;
 }
 
 /* header/logo title */
@@ -105,6 +106,7 @@ body {
     border-radius: 25px;
     float: right;
     margin-left: 20px;
+    margin-bottom: 20px;
     max-width: 1000px;
     max-height: 300px;
 }
@@ -155,14 +157,30 @@ body {
     background: #333;
 }
 
+.footer p {
+    text-align: left;
+}
+
+.footer img {
+    float: right;
+    width: 75px;
+    height: 75px;
+    border-radius: 25px;
+}
+
+.footer h3 {
+    float: right;
+    clear: right;
+}
+
 /* responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 700px) {
     .row {
         flex-direction: column;
     }
 
-    .row div {
-        clear: both;
+    .main {
+        max-height: none;
     }
 }
 
